--- a/src/styles.css
+++ b/src/styles.css
@@ -2,3 +2,13 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.fondoHome{
+
+    padding: 20%;
+
+    background-image: url(./images/integrateb-banner-1.png);
+    background-size: cover;
+    filter: blur(1px); 
+}
+  
