--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,6 +3,7 @@
 
     <div class="background-container bg-cover bg-center bg-no-repeat min-h-screen ">
         <div class="fondoHome"></div>
+
         <div class="relative mx-auto h-full px-4  pb-20   md:pb-10 sm:max-w-xl md:max-w-full md:px-24 lg:max-w-screen-xl lg:px-8">
             <div class="flex flex-col items-center justify-between lg:flex-row py-16">
                 <div class=" relative ">
@@ -12,7 +13,7 @@
                         </p>
 
                         <h2 class="mb-6 max-w-lg text-5xl font-light leading-snug tracking-tight text-g1 sm:text-7xl sm:leading-snug">
-                            Para una sociedad más igualitaria
+                            Por una sociedad más igualitaria
                             <span class="my-1 inline-block border-b-8 border-g4 bg-white px-4 font-bold text-g4 animate__animated animate__flash">Integrateb</span>
                         </h2>
 
@@ -38,7 +39,7 @@
                         <path stroke-linecap="round" stroke-linejoin="round" d="M16 17l-4 4m0 0l-4-4m4 4V3"></path>
                     </svg>
                     <div class="abg-orange-400 mx-auto w-fit overflow-hidden rounded-[6rem] rounded-br-none rounded-tl-none">
-                        <img src="https://placehold.co/400x400">
+                        <img src="/src/images/random1.png">
                     </div>
                 </div>
             </div>
