--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,7 @@
-<!-- component -->
-<div class="bg-white relative   flex items-center  n justify-center overflow-hidden z-50 ">
+<!-- component main page -->
+
+
+<div class="bg-white relative flex items-center n justify-center overflow-hidden z-50 containerMainPage ">
 
     <div class="background-container bg-cover bg-center bg-no-repeat min-h-screen ">
         <div class="fondoHome"></div>
@@ -14,20 +16,19 @@
 
                         <h2 class="mb-6 max-w-lg text-5xl font-light leading-snug tracking-tight text-g1 sm:text-7xl sm:leading-snug">
                             Por una sociedad más igualitaria
-                            <span class="my-1 inline-block border-b-8 border-g4 bg-white px-4 font-bold text-g4 animate__animated animate__flash">Integrateb</span>
+                            <hr>
+                            <span class="my-1 inline-block font-bold text-g4 animate__animated animate__flash">
+                                Integrateb
+                            </span>
                         </h2>
 
-                        <p class="text-base text-gray-700">Sed ut perspiciatis unde omnis iste natus error sit voluptatem
-                            accusantium doloremque it.</p>
+                        <p class="text-base text-gray-700">
+                            La innovadora platadorma web para acercar a las personas migrantes a nuestra cultura, idiomas y costumbres.
+                        </p>
 
                         <div class="mt-10 flex flex-col items-center md:flex-row">
                             <a href="/" class="mb-3 inline-flex h-12 w-full items-center justify-center rounded bg-green-600 px-6 font-medium tracking-wide text-white shadow-md transition hover:bg-blue-800 focus:outline-none md:mr-4 md:mb-0 md:w-auto">
-                                View More</a>
-                            <a href="/" aria-label="" class="group inline-flex items-center font-semibold text-g1">Watch how
-                                it works
-                                <svg xmlns="http://www.w3.org/2000/svg" class="ml-4 h-6 w-6 transition-transform group-hover:translate-x-2" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
-                                    <path stroke-linecap="round" stroke-linejoin="round" d="M17 8l4 4m0 0l-4 4m4-4H3"></path>
-                                </svg>
+                                Ver más
                             </a>
                         </div>
                     </div>
@@ -38,8 +39,8 @@
                     <svg xmlns="http://www.w3.org/2000/svg" class="my-6 mx-auto h-10 w-10 animate-bounce rounded-full bg-white p-2 lg:hidden" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
                         <path stroke-linecap="round" stroke-linejoin="round" d="M16 17l-4 4m0 0l-4-4m4 4V3"></path>
                     </svg>
-                    <div class="abg-orange-400 mx-auto w-fit overflow-hidden rounded-[6rem] rounded-br-none rounded-tl-none">
-                        <img src="/src/images/random1.png">
+                    <div class="abg-orange-400 mx-auto w-fit rounded-[6rem] rounded-br-none rounded-tl-none">
+                        <img src="assets/images/random1.png" alt="Foto logo principal de la pagina integrateb">
                     </div>
                 </div>
             </div>
@@ -68,6 +69,21 @@
         </div> 
     </div>
 
+</div>
+
+<div class="flashcards">
+
+    <div class="contadorTiempo">
+        <img src="assets/images/contador.png" alt="contador tiempo">
+        <span>tiempo</span>
     </div>
+
+    <span class="flashcards-texto">
+        texto
+    </span>
+
+    <input type="text" class="flashcards-input" placeholder="Escribe aquí...">
+
+</div>
 
 <router-outlet />
