--- a/src/components/about/about.component.html
+++ b/src/components/about/about.component.html
@@ -1,7 +1,10 @@
 <div class="bg-white relative flex items-center n justify-center overflow-hidden z-50 containerMainPage ">
 
-    <div class="background-container bg-cover bg-center bg-no-repeat min-h-screen ">
-        <div class="fondoHome"></div>
+    <div class="background-container bg-cover bg-center bg-no-repeat  ">
+        
+        <div class="fondoHome">
+            <img src="assets/images/integrateb-banner-1.png" alt="bannerr integrateb">
+        </div>
 
         <div class="relative mx-auto h-full px-4  pb-20   md:pb-10 sm:max-w-xl md:max-w-full md:px-24 lg:max-w-screen-xl lg:px-8">
             <div class="flex flex-col items-center justify-between lg:flex-row py-16">
@@ -24,7 +27,7 @@
                         </p>
 
                         <div class="mt-10 flex flex-col items-center md:flex-row">
-                            <a href="/" class="mb-3 inline-flex h-12 w-full items-center justify-center rounded bg-green-600 px-6 font-medium tracking-wide text-white shadow-md transition hover:bg-blue-800 focus:outline-none md:mr-4 md:mb-0 md:w-auto">
+                            <a href="/dashboard" class="mb-3 inline-flex h-12 w-full items-center justify-center rounded bg-green-600 px-6 font-medium tracking-wide text-white shadow-md transition hover:bg-blue-800 focus:outline-none md:mr-4 md:mb-0 md:w-auto">
                                 Ver más
                             </a>
                         </div>
@@ -37,7 +40,7 @@
                         <path stroke-linecap="round" stroke-linejoin="round" d="M16 17l-4 4m0 0l-4-4m4 4V3"></path>
                     </svg>
                     <div class="abg-orange-400 mx-auto w-fit rounded-[6rem] rounded-br-none rounded-tl-none">
-                        <img src="assets/images/random1.png" alt="Foto logo principal de la pagina integrateb">
+                        <img id="imagen1" src="assets/images/random1.png" alt="Foto logo principal de la pagina integrateb">
                     </div>
                 </div>
             </div>
