--- a/src/components/courses/dashboard/dashboard.component.html
+++ b/src/components/courses/dashboard/dashboard.component.html
@@ -30,7 +30,9 @@
                 </div>
 
                 <div class="dashboardItem">
-                    <span>Flashcards</span>
+                    <a href="/dashboard/flashcards">
+                        <span>Flashcards</span>
+                    </a>
                 </div>
 
                 <div class="dashboardItem">
