--- a/src/components/shared/header/header.component.html
+++ b/src/components/shared/header/header.component.html
@@ -1,17 +1,19 @@
 <header id="header" class='flex shadow-md py-4 px-4 sm:px-10 font-[sans-serif] min-h-[70px] tracking-wide relative z-50'>
 
-    <div class='flex flex-wrap items-center justify-between gap-5 w-full'>
+    <div class='flex flex-wrap items-center gap-5 w-full'>
 
       <div class="logo">
         <img src="assets/images/logo1.png" alt="logo integrateb">
       </div>
-      <a href="">
-        <p class="text-5xl font-bold text-gray-800 tituloHeader">
-          Integrateb
+
+      <a class="tituloHeader" href="">
+        <p class="text-5xl font-bold text-gray-800">
+          IntegrateB
         </p>
       </a>
   
       <div id="collapseMenu" class='max-lg:hidden lg:!block max-lg:before:fixed max-lg:before:bg-black max-lg:before:opacity-50 max-lg:before:inset-0 max-lg:before:z-50'>
+        
         <button id="toggleClose" class='lg:hidden fixed top-2 right-4 z-[100] rounded-full bg-white p-3'>
           <svg xmlns="http://www.w3.org/2000/svg" class="w-4 fill-black" viewBox="0 0 320.591 320.591">
             <path
@@ -23,14 +25,7 @@
           </svg>
         </button>
   
-        <ul class='lg:flex gap-x-5 max-lg:space-y-3 max-lg:fixed max-lg:bg-white max-lg:w-1/2 max-lg:min-w-[300px] max-lg:top-0 max-lg:left-0 max-lg:p-6 max-lg:h-full max-lg:shadow-md max-lg:overflow-auto z-50'>
-         
-          <li class='mb-6 hidden max-lg:block'>
-            <a href="javascript:void(0)"><p class="text-5xl font-bold text-gray-800">
-                Integrateb
-              </p>
-            </a>
-          </li>
+        <ul class='lg:flex gap-x-5 max-lg:space-y-3 max-lg:fixed max-lg:bg-white max-lg:w-1/2 max-lg:min-w-[300px] max-lg:top-0 max-lg:left-0 max-lg:p-6 max-lg:h-full max-lg:shadow-md max-lg:overflow-auto z-50 listaHeader'>
 
           <li class='max-lg:border-b border-gray-300 max-lg:py-3 px-3'>
             <a href='javascript:void(0)'
