--- a/src/components/about/about.component.html
+++ b/src/components/about/about.component.html
@@ -27,8 +27,8 @@
                         </p>
 
                         <div class="mt-10 flex flex-col items-center md:flex-row">
-                            <a href="/dashboard" class="mb-3 inline-flex h-12 w-full items-center justify-center rounded bg-green-600 px-6 font-medium tracking-wide text-white shadow-md transition hover:bg-blue-800 focus:outline-none md:mr-4 md:mb-0 md:w-auto">
-                                Ver más
+                            <a routerLink="/dashboard" class="mb-3 inline-flex h-12 w-full items-center justify-center rounded bg-green-600 px-6 font-medium tracking-wide text-white shadow-md transition hover:bg-blue-800 focus:outline-none md:mr-4 md:mb-0 md:w-auto">
+                                Ir al Dashboard
                             </a>
                         </div>
                     </div>
@@ -45,10 +45,6 @@
                 </div>
             </div>
         </div> 
-    
-        <div class="hidden text-9xl varien absolute top-6 left-1/4 text-g/10 z-40    ">
-            About Us holaaa
-        </div>
         
         <div class=" absolute -bottom-24 left-10 z-0  opacity-10 "> 
             <svg width="800px" height="800px" viewBox="0 0 24 24" class="w-96 z-0  h-full    object-fill fill-gray-300 text-gray-300" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -71,17 +67,3 @@
 
 </div>
 
-<div class="flashcards">
-
-    <div class="contadorTiempo">
-        <img src="assets/images/contador.png" alt="contador tiempo">
-        <span>tiempo</span>
-    </div>
-
-    <span class="flashcards-texto">
-        texto
-    </span>
-
-    <input type="text" class="flashcards-input" placeholder="Escribe aquí...">
-
-</div>
