--- a/src/components/shared/header/header.component.scss
+++ b/src/components/shared/header/header.component.scss
@@ -29,14 +29,23 @@ header {
     }
 
     .tituloHeader{
-        color: aliceblue;
 
-        transition: 1s ease-in-out;
+        p{
+            color: aliceblue;
 
-        &:hover{
-            font-size: 4rem;
-            letter-spacing: 1rem;
+             transition: 0.3s ease-in-out;
+
+            &:hover{
+                letter-spacing: -0.4rem;
+            }
         }
+        
+    }
+
+    .listaHeader {
+        width: 100%;
+        display: flex;
+        justify-content: center;
     }
 
     a {
@@ -50,6 +59,7 @@ header {
     }
 
     button{
+
         color: #ffffff;
         background-color: #000000;
         border-color: #000000;
