--- a/src/components/courses/dashboard/dashboard.component.html
+++ b/src/components/courses/dashboard/dashboard.component.html
@@ -30,7 +30,7 @@
                 </div>
 
                 <div class="dashboardItem">
-                    <a href="/dashboard/flashcards">
+                    <a routerLink="/dashboard/flashcards">
                         <span>Flashcards</span>
                     </a>
                 </div>
