--- a/src/components/courses/flashcards/flashcards.component.html
+++ b/src/components/courses/flashcards/flashcards.component.html
@@ -2,9 +2,11 @@
 <div class="flashcards">
 
     <div class="flechaAtras">
-        <svg xmlns="http://www.w3.org/2000/svg"  viewBox="0 0 16 16">
-            <path d="M8 0a8 8 0 1 0 0 16A8 8 0 0 0 8 0m3.5 7.5a.5.5 0 0 1 0 1H5.707l2.147 2.146a.5.5 0 0 1-.708.708l-3-3a.5.5 0 0 1 0-.708l3-3a.5.5 0 1 1 .708.708L5.707 7.5z"/>
-        </svg>
+        <a routerLink="/dashboard">
+            <svg xmlns="http://www.w3.org/2000/svg"  viewBox="0 0 16 16">
+                <path d="M8 0a8 8 0 1 0 0 16A8 8 0 0 0 8 0m3.5 7.5a.5.5 0 0 1 0 1H5.707l2.147 2.146a.5.5 0 0 1-.708.708l-3-3a.5.5 0 0 1 0-.708l3-3a.5.5 0 1 1 .708.708L5.707 7.5z"/>
+            </svg>
+        </a>
     </div>
 
     <div class="contadorTiempo">
@@ -12,16 +14,29 @@
         <span>tiempo</span>
     </div>
 
-    <span class="flashcards-texto">
-        {{ palabraActual }}
-    </span>
-
-    <input type="text" class="flashcards-input" placeholder="Escribe aquí...">
-
-    <div class="botonEnviar">
-        <button>
-            Enviar
-        </button>
+    <div class="cardbox-group">
+        <div class="cardBox">
+            <div class="card" (mouseenter)="setMostrarAyuda(true)" (mouseout)="setMostrarAyuda(false)">
+              <div class="front flashcards-texto">
+                <h3>{{ palabraActual }}</h3>
+                <p>Hover to flip</p>
+                <strong>&#x21bb;</strong>
+              </div>
+              <div class="back flashcards-texto">
+                <h3>{{ palabraActual }}</h3>
+              </div>
+            </div>
+          </div>
     </div>
+
+      <div class="input-group">
+        <input type="text" class="flashcards-input" placeholder="Escribe aquí...">
+
+        <div class="botonEnviar">
+            <button (click)="mostrarSiguientePalabra()">
+                Enviar
+            </button>
+        </div>
+      </div>
 
 </div>
