--- a/src/components/courses/flashcards/flashcards.component.scss
+++ b/src/components/courses/flashcards/flashcards.component.scss
@@ -3,7 +3,7 @@
 
     width: auto;
     min-height: 20rem;
-    height: fit-content;  
+    height: 100vh;  
     background-color: rgb(236, 223, 180);
     z-index: 40;
     padding-bottom: 5rem;
@@ -22,7 +22,7 @@
             width: 5rem;
 
             &:hover { 
-                width: 5.5rem;
+                width: 5.2rem;
             }
         }
     }
@@ -44,61 +44,139 @@
         }
     }
 
-    .flashcards-texto{
+    .input-group{
+        grid-column: 3;
+        grid-row: 3;
+        display: flex;
+        width: 100% !important;
+
+        input{
+            
+            padding: 0 5rem 0 5rem;
+    
+            width: 100%;
+            height: 5rem;
+    
+            border-width: 0.1rem;
+            border-style: groove;
+            border-color: rgb(0, 0, 0);
+            border-radius: 1rem;
+    
+            box-shadow: 1px 1px 20px 0 #000000;
+    
+            &:hover {
+                border-width: 0.2rem;
+            }
+    
+        }
+    
+        .botonEnviar{
+
+            width: 20%;
+            height: 5rem;
+            
+            justify-content: center;
+            align-items: center;
+            text-align: center;
+            font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+
+            color: #ffffff;
+            font-size: 3rem;
+            background-color: rgb(68, 248, 33);
+
+            border-width: 0.1rem;
+            border-style: groove;
+            border-color: rgb(0, 0, 0);
+            border-radius: 1rem;
+    
+            box-shadow: 1px 1px 20px 0 #000000;
+    
+            &:hover {
+                border-width: 0.2rem;
+            }
+        }
+
+    }
+
+    .cardbox-group{
         grid-column: 3;
         grid-row: 2;
-
-        justify-items: center;
+        display: flex;
         justify-content: center;
-        text-align: center;
+        place-items: center;
+        margin-bottom: 5rem;
 
-        font-size: 5rem;
-        font-weight: 500;
-        color: rgb(0, 0, 0);
-    }
+        .cardBox {
 
-    input{
-        grid-column: 3;
-        grid-row: 3;
-        padding: 0 5rem 0 5rem;
-        margin: 5rem 10rem 0 10rem;
-
-        width: auto-fill;
-        height: 5rem;
-
-        border-width: 0.1rem;
-        border-style: groove;
-        border-color: rgb(0, 0, 0);
-        border-radius: 1rem;
-
-        box-shadow: 1px 1px 20px 0 #000000;
-
-        &:hover {
-            border-width: 0.2rem;
-        }
-
-    }
-
-    .botonEnviar{
-        grid-column: 3;
-        grid-row: 3;
-
-        width: 5rem;
-        height: 5rem;
+            justify-items: center;
+            align-items: center; 
+           
+            max-width: 50vw;
+            width: 100%;
+            perspective: 50%;
+            font-size: 1.2em;
+    
+            transition: all 0.3s ease-in-out;
+    
+            &:hover .card {
+              transform: rotateY(180deg);
+            }
+    
+            .card {
+    
+                width: 100%;
+                height: 20rem;
         
-        justify-content: center;
-        align-items: center;
+                background-color: #fcfbf0;
+                color: rgb(0, 0, 0);
+                font-size: 2rem;
+                font-weight: 500;
+                text-transform: uppercase;
+                text-align: center;
+              
+                
+                cursor: pointer;
+                box-shadow: 1px 1px 20px 0 #000000;
+                
+                transform-style: preserve-3d;
+                transition: transform 0.3s ease-in-out;
+                animation: giro 1s 1;
+        
+                .front, .back {
+                  backface-visibility: hidden;
+                  box-sizing: border-box;
+                  display: block;
+                  position: absolute;
+                  
+                  width: 100%;
+                  height: 100%;
+                  padding: 0.8em;
+        
+                  font-size: 1.2em;
+                  
+                }
 
-        background-color: antiquewhite;
-        box-shadow: 1px 1px 20px 0 #000000;
-
-        border-width: 0.1rem;
-        border-style: groove;
-        border-color: rgb(0, 0, 0);
-        border-radius: 1rem;
-
-        &:hover {
-            border-width: 0.2rem;
-        }
+                .front{
+                    h3{
+                        margin-bottom: 2rem;
+                    }
+                }
+          
+                .back {
+                  transform: rotateY(180deg);
+                }
+              }
+          }
+          
+          @keyframes giro {
+            from {
+              transform: rotateY(180deg);
+            }
+            to {
+              transform: rotateY(0deg);
+            }
+          }
     }
+
   }
+
