--- a/src/components/courses/flashcards/flashcards.component.scss
+++ b/src/components/courses/flashcards/flashcards.component.scss
@@ -118,11 +118,13 @@
     
             transition: all 0.3s ease-in-out;
     
-            &:hover .card {
-              transform: rotateY(180deg);
-            }
-    
+             
             .card {
+                &.flipped {
+                    perspective: 50%;
+                    transition: all 0.3s ease-in-out;
+                    transform: rotateY(180deg);
+                  }
     
                 width: 100%;
                 height: 20rem;
@@ -133,7 +135,6 @@
                 font-weight: 500;
                 text-transform: uppercase;
                 text-align: center;
-              
                 
                 cursor: pointer;
                 box-shadow: 1px 1px 20px 0 #000000;
@@ -176,6 +177,49 @@
               transform: rotateY(0deg);
             }
           }
+
+        .botonera-group{
+            width: 20%;
+            height: 100%;
+            display: inline-block;
+    
+            color: #ffffff;
+            font-size: 2rem;  
+            justify-content: center;
+            align-items: center;
+            text-align: center;
+            font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    
+            .botonFlip {
+                width: 100%;
+
+                background-color: #b30665;
+                box-shadow: 1px 1px 20px 0 #000000;
+                border-width: 0.1rem;
+                border-style: groove;
+                border-color: rgb(0, 0, 0);
+
+                &:hover {
+                    border-width: 0.2rem;
+                }
+            }
+
+            .botonReproducir {
+                width: 100%;
+
+                background-color: #4306b3;
+                box-shadow: 1px 1px 20px 0 #000000;
+                border-width: 0.1rem;
+                border-style: groove;
+                border-color: rgb(0, 0, 0);
+
+                &:hover {
+                    border-width: 0.2rem;
+                }
+            }
+
+        }
+        
     }
 
   }
