--- a/src/components/courses/dashboard/dashboard.component.html
+++ b/src/components/courses/dashboard/dashboard.component.html
@@ -26,19 +26,24 @@
             <div class="dasboardContainer">
                 
                 <div class="dashboardItem">
-                    <span>Talleres</span>
-                </div>
-
-                <div class="dashboardItem">
-                    <a routerLink="/dashboard/flashcards">
-                        <span>Flashcards</span>
+                    <a routerLink="/dashboard/talleres">
+                        <div class="containerImage">
+                            <img src="/assets/images/talleres.png" alt="imagen flashcard integrateb">
+                        </div>
+                        <h3>Talleres</h3>
+                        <p>Aqui encontrarás todo tipo de talleres, cursos y formaciones para acercarnos mutuamente</p>
                     </a>
                 </div>
 
                 <div class="dashboardItem">
-                    <span>Item3</span>
-                </div>
-
+                    <a routerLink="/dashboard/flashcards">
+                        <div class="containerImage">
+                            <img src="/assets/images/flashcards.png" alt="imagen flashcard integrateb">
+                        </div>
+                        <h3>Flashcards</h3>
+                        <p>Herramienta interactiva que ha demostrado un gran resultado y adaptabilidad según los últimos estudios</p>
+                    </a>
+                </div>  
 
             </div>
 
